fixed html and css for notes so that the show chord button does not cause the tonic to shift

--- a/src/app/notes/notes.component.css
+++ b/src/app/notes/notes.component.css
@@ -5,13 +5,14 @@ ul {
 }
 
 
-li{
+li div{
 	border-width: 2px;
 	border-style: solid;
 }
 
-div{
+li div span{
 	text-align: center;
+	display: block;
 }
 
 button{
